[package]
name = "partisia-torus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
futures = "0.3.21"
hex = "0.4.3"
hex-literal = "0.3.4"
libsecp256k1 = "0.7.1"
rand = "0.8.3"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["serde_derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
tokio = { version = "1.6.1", features = ["full"] }

[features]
default = ["single_threaded", "multi_thread"]
single_threaded = []
multi_thread = []
